# Scraping_the_Web_for_NLP_applications

./: .gitignore  README.md  pyproject.toml
How_to_use_ChatGPT_to_fully_Automate_Web_Scraping/: imdb_top_movies.csv  requirements.txt  webscrape.py
Raspando_a_Web_para_aplicativos_de_PNL/: requirements.txt  scraping_the_Web_for_NLP_applications.ipynb
ScrapeGraphAI/: scrape_any_website_with_nlp.py
Scrapling/: basic_usage.py
