[project]
name = "project-scraping"
version = "0.1.0"
description = "Aqui vamos a seguir explorando várias ferramentas para scraping"
readme = "README.md"
authors = [
    { name = "EddyGiusepe", email = "eddychirinos.unac@gmail.com" }
]
requires-python = ">=3.13.7, <3.14"
dependencies = []

[dependency-groups]
dev = [
    "black>=26.5.1",
]

[tool.ruff]
extend = "ruff.toml"