[project]
name = "project-scraping"
version = "0.1.0"
description = "Aqui vamos a seguir explorando várias ferramentas para scraping"
readme = "README.md"
authors = [
    { name = "EddyGiusepe", email = "eddychirinos.unac@gmail.com" }
]
requires-python = ">=3.13.7, <3.14"
dependencies = [
    "browserforge==1.2.4",
    "curl-cffi==0.15.0",
    "markdownify==1.2.2",
    "playwright==1.60.0",
    "python-dotenv==1.2.2",
    "scrapegraphai==2.1.3",
    "scrapling==0.4.9",
]

[dependency-groups]
dev = [
    "black>=26.5.1",
    "ruff>=0.15.16",
]

[tool.ruff]
extend = "ruff.toml"
